tests/ui/consts/const-fn-cycle-tait.stderr
error[E0493]: destructor of `Tait` cannot be evaluated at compile-time
  --> $DIR/const-fn-cycle-tait.rs:12:19
   |
LL | pub const fn take(_: Tait) {}
   |                   ^         - value is dropped here
   |                   |
   |                   the destructor for this type cannot be evaluated in constant functions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
